Fixing input fields text not showing up

--- a/sass/_mailchimp.scss
+++ b/sass/_mailchimp.scss
@@ -21,6 +21,7 @@
   border: 1px solid #999;
   border-radius: 5px;
   -webkit-appearance: none;
+  color: #222;
 }
 
 #mc_embed_signup input[type=checkbox] {
@@ -108,6 +109,7 @@
   width: 100%;
   padding: 8px 0;
   text-indent: 2%;
+  color: #222;
 }
 
 #mc_embed_signup .mc-field-group select {
